--- a/web_server/html/dark.css
+++ b/web_server/html/dark.css
@@ -32,7 +32,7 @@ button:hover, .reboot:hover {
 .settingsHeader, .settingsHeader *, .main-wrap, .WiFi span, td, th, .input-container input:valid + label, .input-container input:invalid:not(:placeholder-shown) + label, .input-container input:focus + label {
     color: #dadada !important;
 }
-#networksFound, #apMAC {
+#apMAC {
     background: rgba(255, 255, 255, .1);
 }
 .card, .card-small {
