Redirects to folder root instead of server root

--- a/web_server/html/dark.css
+++ b/web_server/html/dark.css
@@ -30,7 +30,7 @@ button:hover, .reboot:hover {
     color: #dadada
 }
 .settingsHeader, .settingsHeader *, .main-wrap, .WiFi span, td, th, .input-container input:valid + label, .input-container input:invalid:not(:placeholder-shown) + label, .input-container input:focus + label {
-    color: #dadada
+    color: #dadada !important
 }
 #apMAC {
     background: rgba(255, 255, 255, .1)
