--- a/web_server/html/main.css
+++ b/web_server/html/main.css
@@ -10,6 +10,7 @@ html, body {
     user-select: none !important;
     -webkit-touch-callout: none !important;
     -webkit-tap-highlight-color: transparent;
+    background: #F1F1F1;
 }
 .main-wrap {
     position: absolute;
@@ -419,9 +420,6 @@ hr {
 hr.small {
     -webkit-margin-before: .5em;
     -webkit-margin-after: 1.3em;
-}
-::-webkit-scrollbar-track-color {
-    background: #000;
 }
 ::-webkit-input-placeholder {
     color: #c7c7c7;
@@ -928,27 +926,6 @@ footer a {
     .show #notification {
         transform: translate(0, -15px);
     }
-    ::-webkit-scrollbar {
-        width: 14px;
-        background-color: #e8e8e8;
-    }
-    ::-webkit-scrollbar-thumb {
-        background-color: #a9a9a9;
-    }
-    ::-webkit-scrollbar-thumb:hover {
-        background-color: #b5b5b5;
-    }
-    ::-webkit-scrollbar-thumb:active, ::-webkit-scrollbar-thumb:disabled {
-        background-color: #6d6d6d;
-    }
-    ::-webkit-scrollbar-button {
-        display: none;
-        width: 0;
-        height: 0;
-    }
-    ::-webkit-scrollbar-corner {
-        background-color: transparent;
-    }
     .row.inputCheckbox .col-6:nth-child(2) {
         margin-top: 26px;
     }
@@ -982,7 +959,7 @@ footer a {
         display: none;
     }
     .background {
-        display: none;
+        display: none !important;
     }
     nav .main-header {
         display: none;
@@ -1120,6 +1097,7 @@ footer a {
     overflow: hidden;
     width: 100vw;
     height: 100vh;
+    display: none;
 }
 .background svg {
     width: 100%;
