Added Cache Control feature
This will allow improved speed on Wi-PWN by preventing unnecessary requests for files each time new pages are loaded

--- a/web_server/html/main.css
+++ b/web_server/html/main.css
@@ -1,7 +1,7 @@
 :root {
     --theme-color: #1976d2;
 }
-html, body {
+body {
     font-size: 100%;
     margin: 0;
     -webkit-user-select: none !important;
