--- a/android_app/app/src/main/res/menu/activity_main_drawer.xml
+++ b/android_app/app/src/main/res/menu/activity_main_drawer.xml
@@ -15,21 +15,29 @@
             android:icon="@drawable/ic_menu_attack"
             android:title="Attack" />
         <item
+            android:id="@+id/nav_detector"
+            android:icon="@drawable/ic_menu_detector"
+            android:title="Detector" />
+        <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_menu_settings"
             android:title="Settings" />
+        <item
+            android:id="@+id/nav_info"
+            android:icon="@drawable/ic_menu_info"
+            android:title="Info" />
     </group>
 
-    <item android:title="Development">
+    <item android:title="Online">
         <menu>
             <item
                 android:id="@+id/nav_github"
                 android:icon="@drawable/ic_menu_github"
                 android:title="Github" />
             <item
-                android:id="@+id/nav_info"
-                android:icon="@drawable/ic_menu_info"
-                android:title="About" />
+                android:id="@+id/nav_discord"
+                android:icon="@drawable/ic_menu_discord"
+                android:title="Discord server" />
         </menu>
     </item>
 
